6608862: segv in JvmtiEnvBase::check_for_periodic_clean_up()

Reviewed-by: dholmes, dcubed, jcoomes